fix(PatientBrowser): Use text overflow for description

--- a/public/global.css
+++ b/public/global.css
@@ -5,3 +5,8 @@
 .height-100 {
     height: 100%;
 }
+
+.text-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
